test/corpus/html-blade.txt
================================================================================
Named Entities
================================================================================

@if('test')

&amp;
&lt;
&gt;
&quot;
&apos;
&copy;
&reg;
&trade;
&ndash;
&mdash;
&lsquo;
&rsquo;
&ldquo;
&rdquo;
&hellip;
&iexcl;
&cent;
&yen;
&euro;
&sect;
&para;
&laquo;
&raquo;
&times;
&divide;
&plusmn;
&sup1;
&sup2;
&sup3;
&frac14;
&frac12;
&frac34;
&deg;
&micro;
&bull;
&prime;
&Prime;
&lsaquo;
&rsaquo;

@endif
----------------

(document
  (conditional
    (directive_start)
    (parameter)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (entity)
    (text)
    (directive_end)))

================================================================================
Numbered Entities
================================================================================
@php

&#34;
&#38;
&#39;
&#60;
&#62;
&#169;
&#174;
&#8482;
&#8211;
&#8212;
&#8216;
&#8217;
&#8220;
&#8221;
&#8230;
&#161;
&#162;
&#165;
&#8364;
&#167;
&#182;
&#171;
&#187;
&#215;
&#247;
&#177;
&#185;
&#178;
&#179;
&#188;
&#189;
&#190;
&#176;
&#181;
&#8226;
&#8242;
&#8243;
&#8249;
&#8250;
@endphp
--------------------

(document
  (php_statement
    (directive_start)
    (php_only)
    (directive_end)))

================================================================================
Laravel 12 Welcome.blade.php
================================================================================

<!DOCTYPE html>
<html lang="{{ str_replace('_', '-', app()->getLocale()) }}">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1">

        <title>Laravel</title>

        <!-- Fonts -->
        <link rel="preconnect" href="https://fonts.bunny.net">
        <link href="https://fonts.bunny.net/css?family=instrument-sans:400,500,600" rel="stylesheet" />

        <!-- Styles / Scripts -->
        @if (file_exists(public_path('build/manifest.json')) || file_exists(public_path('hot')))
            @vite(['resources/css/app.css', 'resources/js/app.js'])
        @else
            <style>
